<?xml version="1.0" encoding="utf-8"?>
<!--
* Copyright 2021 Daniele Verducci
*
* This file is part of PunkBeers.
*
* PunkBeers is free software: you can redistribute it and/or modify
* it under the terms of the GNU General Public License as published by
* the Free Software Foundation, either version 3 of the License, or
* (at your option) any later version.
*
* PunkBeers is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
* GNU General Public License for more details.
*
* You should have received a copy of the GNU General Public License
* along with PunkBeers.  If not, see <http://www.gnu.org/licenses/>.
*
-->
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.BeerDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <ImageView
            android:id="@+id/beer_detail_pic"
            android:layout_width="match_parent"
            android:layout_height="200dp"/>

        <TextView
            android:id="@+id/beer_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textSize="24dp"
            android:textStyle="bold"
            android:textColor="@color/accent_500"
            android:text="@string/placeholder_beertitle"/>

        <TextView
            android:id="@+id/beer_detail_shortdesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/placeholder_tagline"/>

        <TextView
            android:id="@+id/beer_detail_firstbrewed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            app:drawableStartCompat="@drawable/ic_firstbrewed"
            app:drawableTint="@color/accent_500"
            android:text="@string/placeholder_firstbrewed"/>

        <TextView
            android:id="@+id/beer_detail_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:gravity="center"
            android:background="@drawable/rounded_background"
            android:text="@string/placeholder_description"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>