<?xml version="1.0" encoding="utf-8"?>
<!--
* Copyright 2021 Daniele Verducci
*
* This file is part of PunkBeers.
*
* PunkBeers is free software: you can redistribute it and/or modify
* it under the terms of the GNU General Public License as published by
* the Free Software Foundation, either version 3 of the License, or
* (at your option) any later version.
*
* PunkBeers is distributed in the hope that it will be useful,
* but WITHOUT ANY WARRANTY; without even the implied warranty of
* MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
* GNU General Public License for more details.
*
* You should have received a copy of the GNU General Public License
* along with PunkBeers.  If not, see <http://www.gnu.org/licenses/>.
*
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/beer_item_pic"
        android:layout_width="60dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/beer_item_name"
        style="@style/Widget.AppCompat.TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="10dp"
        android:ellipsize="end"
        android:lines="1"
        android:maxLines="1"
        android:text="@string/placeholder_beertitle"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/beer_item_descr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/beer_item_pic"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/beer_item_descr"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/placeholder_tagline"
        app:layout_constraintBottom_toTopOf="@+id/beer_item_firstbrewed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/beer_item_pic"
        app:layout_constraintTop_toBottomOf="@+id/beer_item_name" />

    <TextView
        android:id="@+id/beer_item_firstbrewed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:text="@string/placeholder_firstbrewed"
        app:drawableLeftCompat="@drawable/ic_firstbrewed_list"
        android:drawablePadding="5dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/beer_item_pic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/beer_item_pic"
        app:layout_constraintTop_toBottomOf="@+id/beer_item_descr" />

    <ProgressBar
        android:id="@+id/beer_item_progress"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beer_item_pic" />

</androidx.constraintlayout.widget.ConstraintLayout>